# Rust-based-POSIX-compatible-Kernel

./: .gitignore  BUGFIXES.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  LICENSE-DOCS  Makefile  PRD.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  README_CN.md  ToDolist.md.bak  dashboard.py  demo.sh  rust-toolchain.toml  setup_venv.sh  比赛要求.txt
.cargo/: config.toml
.github/workflows/: rust.yml
docs/: SCREENSHOTS.md  architecture_cn.md  architecture_en.md  dashboard_demo_guide_cn.md  dashboard_demo_guide_en.md  debugging_cn.md  debugging_en.md  experiment_guide_cn.md  experiment_guide_en.md  memory_cn.md  memory_en.md  testing_cn.md  testing_en.md
src/: config.rs  console.rs  entry.asm  lang_items.rs  linker.ld  main.rs  sync.rs
src/mm/: address.rs  frame_allocator.rs  heap_allocator.rs  mod.rs  page_table.rs
src/sbi/: mod.rs
src/syscall/: fs.rs  mod.rs  process.rs
src/trap/: context.rs  mod.rs  trap.S
