[package]
name = "rpos-kernel"
version = "0.1.0"
edition = "2021"
authors = ["RPOS Team"]

[dependencies]
riscv = "0.10"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
spin = "0.9"
bitflags = "2.4"
buddy_system_allocator = "0.9"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = 3

[build-dependencies]
